# DVMeshNoiseSubmission

./: .gitignore  README.md
Document/: CoverArt.tex  DVMeshNoise.tex
Source/example/: CMakeLists.txt  dv-basic-usage.cxx  dv-decimation-error.cxx  dv-wireframe.cxx  mesh_quality.py
Source/example/include/: dvGenerateHalfSphere.h  dvWireFrame.h
